# python-skill-doctor

./: .gitignore  README.md
skills/python-skill-doctor/: README.md  SKILL.md  pyproject.toml
skills/python-skill-doctor/references/: skill-packaging.md
skills/python-skill-doctor/scripts/: package_skill.py  quick_validate.py  run_doctor.py
skills/python-skill-doctor/src/python_skill_doctor/: cli.py  core.py  models.py
