[project]
name = "python-skill-doctor"
version = "0.1.0"
description = "Inspect and repair Python-based agent skills with local virtual environments"
requires-python = ">=3.11"

[project.scripts]
python-skill-doctor = "python_skill_doctor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
